<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/llLogoName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/tvAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_header"
            android:textColor="@color/black"
            android:gravity="center"></TextView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llDetails"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/llName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/name"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:singleLine="true"
                android:ellipsize="end"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:layout_marginLeft="17dp"
            android:layout_marginRight="17dp"
            android:background="@color/eash" />

        <LinearLayout
            android:id="@+id/llPhnNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etPhnNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/phn"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:singleLine="true" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:layout_marginLeft="17dp"
            android:layout_marginRight="17dp"
            android:background="@color/eash" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/btnActive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_bg"
                android:gravity="center"
                android:text="GET ACTIVE"
                android:textColor="@color/white" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvOTPText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/OTP_text"
            android:textColor="@color/grey"
            android:gravity="center_horizontal"></TextView>

        <LinearLayout
            android:id="@+id/llOTP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/etOTP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="OTP"
                    android:textColor="@color/black"
                    android:singleLine="true"
                    android:background="@android:color/transparent"
                    android:gravity="center_vertical"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.2dp"
                    android:background="@color/grey"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llSubmit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_vertical">

                <Button
                    android:id="@+id/btnSubmit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/submit_bg"
                    android:text="@string/OTP_submit"
                    android:gravity="center"
                    android:textColor="@color/white"/>

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>