<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/transparent">

    <LinearLayout
        android:id="@+id/ll_slider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/blue_bg"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout

                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical">

                <com.map.activity.utill.CircleImageView
                    android:id="@+id/iv_profileimage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/user"
                    app:border_color="@android:color/transparent"
                    app:border_width="2dp" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2">

                <LinearLayout
                    android:id="@+id/ll_profile_name_number"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="left|center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Michalle William"
                        android:textStyle="bold"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/tv_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="+91 9830012345"
                        android:textColor="@color/white" />


                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:background="@color/white"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_menu_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/tv_interest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/myinterest"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/tv_activity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/myactivity"
                    android:textColor="@color/black"/>

            </LinearLayout>
        </LinearLayout>


    </LinearLayout>


</LinearLayout>
